# pipeline-playground

./: .python-version  pyproject.toml
src/pipeline_playground/: main.py
tests/: test_cli.py
