[tool.poetry]
name = "pipeline-playground"
version = "0.1.0"
description = "Playground for a python data-pipeline using modern tools"
license = "MIT"
authors = ["Eirik Fagerhaug <eirik.fagerhaug@evry.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[tool.poetry.scripts]
pipeline-playground = "pipeline_playground.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

